--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "anthonypileggi.github.io"
-title: "Anthony Pileggi"
+title: "Stochastic Squirrel LLC"
 favicon: images/favicon.ico
 description: |
   Anthony Pileggi
@@ -9,11 +9,13 @@ repository_url: https://github.com/anthonypileggi/anthonypileggi.github.io
 google_analytics: "UA-114744558-2"
 navbar:
   logo:
-    image: images/anthony-circle.png
+    image: images/stochastic-squirrel-circle.png
     href: https://www.stochastic-squirrel.com
   right:
     - text: "Home"
       href: index.html
+    - text: "LLC"
+      href: company.html
     - text: "Shiny Apps"
       href: rshiny.html
     - text: "R Packages"
@@ -22,4 +24,5 @@ navbar:
       href: https://github.com/anthonypileggi/cv/raw/master/cv.pdf
   source_url: true
     
-output: distill::distill_article
+output: 
+  distill::distill_article
